feat: 增加 Google 翻译功能
1. 自动翻译英文标题和摘要为中文
2. 智能跳过中文源（36氪、微信、微博等）
3. 邮件支持中英文双语对照显示
4. 翻译失败自动降级到原文版本

--- a/.github/workflows/daily_news.yml
+++ b/.github/workflows/daily_news.yml
@@ -32,9 +32,15 @@ jobs:
           EMAIL_USER: ${{ secrets.EMAIL_USER }}
           EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
           EMAIL_TO: ${{ secrets.EMAIL_TO }}
+          
           # Reddit API配置 (可选)
           REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
           REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
+          
+          # 翻译配置
+          GOOGLE_TRANSLATE_API_KEY: ${{ secrets.GOOGLE_TRANSLATE_API_KEY }}
+          GOOGLE_PROJECT_ID: ${{ secrets.GOOGLE_PROJECT_ID }}
+          TRANSLATION_ENABLED: "true"
         run: |
           cd src
           python main.py
