fix: 放宽订阅检查范围至7天并强制触发即时测试

--- a/.github/workflows/daily_news.yml
+++ b/.github/workflows/daily_news.yml
@@ -2,8 +2,10 @@ name: Daily AI News
 
 on:
   schedule:
-    # 北京时间 08:23 (UTC 00:23)，避开整点高峰，减少延迟
     - cron: '23 0 * * *'
+  push:
+    branches:
+      - main  # 推送时立即触发，用于测试
   workflow_dispatch:
 
 jobs:
