--- a/.github/workflows/daily_news.yml
+++ b/.github/workflows/daily_news.yml
@@ -2,10 +2,8 @@ name: Daily AI News
 
 on:
   schedule:
+    # 北京时间 08:23 (UTC 00:23)
     - cron: '23 0 * * *'
-  push:
-    branches:
-      - main  # 推送时立即触发，用于测试
   workflow_dispatch:
 
 jobs:
