fix: 修复同步任务失败的问题
1. 修正 subscriber_manager.py 的导入路径问题
2. 优化 sub_sync_hourly.yml 工作流，设置正确的 PYTHONPATH
3. 增强 git commit 逻辑，防止因无变动导致的流程报错

--- a/.github/workflows/daily_news.yml
+++ b/.github/workflows/daily_news.yml
@@ -43,6 +43,13 @@ jobs:
       - name: Sync subscribers
         run: |
           git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.name "GitHub Action Bot"
+          mkdir -p data
+          touch data/subscribers.txt
           git add data/subscribers.txt
-          git diff --quiet && git diff --staged --quiet || (git commit -m "docs: 自动同步订阅列表 [skip ci]" && git push)
+          if git diff --staged --quiet; then
+            echo "No changes to sync."
+          else
+            git commit -m "docs: 自动同步订阅列表 [skip ci]"
+            git push
+          fi
