fix: 增强工作流稳定性，增加重试逻辑与远程同步
1. 为所有工作流增加 git pull --rebase，防止推送冲突
2. 为推送步骤增加 3 次自动重试，应对 GitHub 500 错误
3. 设置 fetch-depth: 0 确保 rebase 逻辑正常运行

--- a/.github/workflows/daily_news.yml
+++ b/.github/workflows/daily_news.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -44,12 +46,38 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action Bot"
+          
           mkdir -p data
           touch data/subscribers.txt
+          
           git add data/subscribers.txt
+          
           if git diff --staged --quiet; then
             echo "No changes to sync."
           else
             git commit -m "docs: 自动同步订阅列表 [skip ci]"
-            git push
+            
+            MAX_RETRIES=3
+            RETRY_COUNT=0
+            SUCCESS=false
+            
+            while [ $RETRY_COUNT -lt $MAX_RETRIES ]; do
+              echo "Pushing changes (Attempt $((RETRY_COUNT+1)))..."
+              git pull --rebase origin main
+              
+              if git push origin main; then
+                echo "Successfully pushed changes."
+                SUCCESS=true
+                break
+              else
+                echo "Push failed, retrying in 5 seconds..."
+                RETRY_COUNT=$((RETRY_COUNT+1))
+                sleep 5
+              fi
+            done
+            
+            if [ "$SUCCESS" = false ]; then
+              echo "Failed to push changes after $MAX_RETRIES attempts."
+              exit 1
+            fi
           fi
