fix: 将日报触发时间微调至 08:47 以规避 GitHub 调度高峰

--- a/.github/workflows/daily_news.yml
+++ b/.github/workflows/daily_news.yml
@@ -2,8 +2,9 @@ name: Daily AI News
 
 on:
   schedule:
-    # 北京时间 08:23 (UTC 00:23)
-    - cron: '23 0 * * *'
+    # 再次微调：北京时间 08:47 (UTC 00:47)
+    # 避开整点、半点及之前的 23 分，选择更冷门的时间点以降低 GitHub 调度延迟
+    - cron: '47 0 * * *'
   workflow_dispatch:
 
 jobs:
